# ml4cart

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
common/: README.md  __init__.py  cd8_model.py  cd8_training.py  masks.py  paths.py  pdochange_data.py  pdochange_model.py  pdochange_training.py  plotting.py  seed.py
docs/: CODE_AVAILABILITY.md  DEMO.md  INSTALLATION.md  METHODS_OVERVIEW.md  PARAMETERS.md  PUBLICATION_CHECKLIST.md  TEST_DATA.md
dynamics_analysis/: README.md  __init__.py  cluster.py  merge_cell_dynamics.py  spearman_all.py  spearman_bar.py  spearman_graph.py
dynamics_model/: README.md  __init__.py  config.py  run_drug_eval.py  run_ml_train.py  run_shap_analysis.py  train.py  train_test_input_vs_embedding.py
onchip_cd8_distribution/: README.md  __init__.py  dataset.py  run_inference.py  run_r4_drug_comparison.py  run_shap_analysis.py  train.py
onchip_distribution_analysis/: README.md  __init__.py  analyze_caf_cd8_local.py  analyze_caf_cd8_local_combined.py  analyze_caf_cd8_segxgradcam.py  analyze_raw_mask_16_tiles.py  export_16tile_bar_report.py  export_figures_and_report.py  summary_values.json
pdo_size_change_prediction/: README.md  __init__.py  compare_actin_ck_vs_cd8_actin_ck.py  draw_prob_distribution.py  draw_segx_gradcam.py  run_r4_drug_eval.py  run_shap_pdochange.py  train.py
preprocess/: README.md  __init__.py
scripts/: create_demo_data.py
tcga_cd8_distribution/: README.md  __init__.py  dataset.py  run_inference.py  run_shap_analysis.py  train.py
tests/: README.md  test_cli_help.py  test_training_smoke.py  (+1 more)
(+61 files in other folders)
